syntax = "proto3";

option csharp_namespace = "Tony.FileTransfer.Server";

package common;

message CommonResponse{
	bool Result=1;
	ErrorCodes ErrorCode=2;
}
message CommonResponseWithMessage {
	CommonResponse Result=1;
	string Message=2;
}
enum ErrorCodes{
	NoError=0;
	DataBaseError=1;

	FileAlreadyExistInServerCache=2;
	FileAlreadyExistInServerDB=3;
	FileNotExistInServerCache=4;
	FileNotExistInServerDB=5;

	BadCallContext=6;

	RecognizeIdNotExist=7;
	UserNotExist=8;
	UserMachineNotBind=9;

	MD5CompareError=10;
	CacheFileNotExist=11;

	InValidRecognizeId=12;
	InValidMachineIdentity=13;

	InValidUserId=14;

	InValidUserNameOrPassword=15;

	UserNameIsNull=16;
	UserNameHasExist=17;
	InValidPassword=18;
}
message CommonRequest{
	string message=1;
}

